--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="В нашей команде работают квалифицированные специалисты, которые помогут вам выбрать наиболее подходящие материалы для накрытия крыш, предложат интересное решение, найдут то, что вы искали. Наши опытные монтажники воплотят ваши мечты в жизнь! Монтаж крыши, накрыть крышу, а также демонтаж крыши, качественно и по доступным ценам в Минске и Минской области">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	 <link rel="shortcut icon" href="img/01.png" type="image/png">
@@ -11,14 +12,14 @@
 	<link rel="stylesheet" href="MENU/css/style.css">
 	<title>TopRoof</title>
 </head>
-<body>
+<body style="background-image: none;">
 	<div class="header-before" style="background: #fff">
 		<div class="header-section-before">
 			<div class="header-logo-before"><a href="index.html"><img src="img/logo-02.png" ></a></div>
 		</div>
 		<div class="header-section-before">
 			<div class="header-section-element-before"><a href="index.html">Главная</a></div>
-			<div class="header-section-element-before"><a href="about.html">О нас</a></div>
+			<div class="header-section-element-before"><a href="about.html">О&nbsp;нас</a></div>
 			<div class="header-section-element-before"><a href="portfolio.html">Портфолио</a></div>
 			<div class="header-section-element-before"><a href="yslugi.html">Услуги</a></div>
 			<div class="header-section-element-before"><a href="contakts.html">Контакты</a></div>
@@ -48,7 +49,7 @@
 	<div class="about"  style="background: #fafafa; height: auto;">
 		<div class="about-section-logo">О&nbsp;нас</div>
 		<div class="about-section-element">
-			<div class="about-section-element-title">В нашей команде работают квалифицированные специалисты, которые помогут вам выбрать наиболее подходящие материалы для накрытия крыш, предложат интересное решение, найдут то, что вы искали. Наши опытные монтажники воплотят ваши мечты в жизнь!
+			<div class="about-section-element-title" style="margin-top:10%;">В нашей команде работают квалифицированные специалисты, которые помогут вам выбрать наиболее подходящие материалы для накрытия крыш, предложат интересное решение, найдут то, что вы искали. Наши опытные монтажники воплотят ваши мечты в жизнь!
 			</div>
 		</div>
 	</div>
@@ -57,7 +58,7 @@
 		
 	</div>
 <div class="about"  style="background: #fafafa; height: auto;">
-		<div class="block">
+	<div class="block">
 		<div class="about-section-element">
 			<div class="about-section-element-title">
 				<img src="img/guarantee.png">
@@ -65,7 +66,7 @@
 				<p>2&nbsp;-&nbsp;ух&nbsp;летняя гарантия</p></div>
 			</div>
 		</div>
-		<div class="about-section-element">
+		<div class="about-section-element" style="margin-left: 7%;">
 			<div class="about-section-element-title">
 				<img src="img/delivery.png">
 				<div><h2>Бесплатный&nbsp;выезд</h2>
@@ -81,41 +82,49 @@
 		</div>
 		<div class="about-section-element">
 			<div class="about-section-element-title">
-				<img src="img/house2.png">
+				<img src="img/house.png">
 				<div><h2>Бесплатный&nbsp;замер</h2>
 				<p>Выезжаем и осуществляем замер</p></div>
 			</div>
 		</div>
 	</div>
 </div>
-<div class="about"  style="background: #fafafa; height: auto;">
+<div class="about"  style="background: #fff; height: auto;">
 		<div class="about-section-logo">С&nbsp;кем мы&nbsp;сотрудничаем?</div>
 	</div>
-<div class="about"  style="background: #fafafa; height: auto;">
-		<div class="block">
+<div class="about"  style="background: #fff; height: auto;">
+	<div class="block" style="background: #fff; width: 100%;">
 		<div class="about-section-element">
-			<div class="about-section-element-title">
-				<img src="img/guarantee.png">
-				<div><h2>Металлопрофиль</h2></div>
+			<a href="https://metallprofil.by">
+				<div class="about-section-element-title">
+					<img src="img/Metall_logo.png">
+					<div>Металлопрофиль</div>
+				</div>
+			</a>
+		</div>
+		<div class="about-section-element">
+			<a href="https://www.grandline.by">
+				<div class="about-section-element-title">
+					<img src="img/Grand_line_logo.png">
+					<div>Grand&nbsp;Line</div>
+				</div>
+			</a>
+		</div>
+		<div class="about-section-element">
+			<a href="https://www.ruukki.ru">
+				<div class="about-section-element-title">
+					<img src="img/ruukki_logo.jpg">
+				<div>Ruukki</div>
+			</a>
 			</div>
 		</div>
 		<div class="about-section-element">
-			<div class="about-section-element-title">
-				<img src="img/delivery.png">
-				<div><h2>Grand Line</h2></div>
-			</div>
-		</div>
-		<div class="about-section-element">
-			<div class="about-section-element-title">
-				<img src="img/counselor.png">
-			<div><h2>Ruukki</h2></div>
-			</div>
-		</div>
-		<div class="about-section-element">
-			<div class="about-section-element-title">
-				<img src="img/house2.png">
-				<div><h2>Альтер</h2></div>
-			</div>
+			<a href="https://alter.by">
+				<div class="about-section-element-title">
+					<img src="img/alter_logo.png">
+					<div>Альтер</div>
+				</div>
+			</a>
 		</div>
 	</div>
 </div>
