--- a/contakts.html
+++ b/contakts.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="В нашей команде работают квалифицированные специалисты, которые помогут вам выбрать наиболее подходящие материалы для накрытия крыш, предложат интересное решение, найдут то, что вы искали. Наши опытные монтажники воплотят ваши мечты в жизнь! Монтаж крыши, накрыть крышу, а также демонтаж крыши, качественно и по доступным ценам в Минске и Минской области">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	 <link rel="shortcut icon" href="img/01.png" type="image/png">
@@ -11,14 +13,14 @@
 	<link rel="stylesheet" href="MENU/css/style.css">
 	<title>TopRoof</title>
 </head>
-<body>
+<body style="background-image: none;">
 	<div class="header-before" style="background: #fff">
 		<div class="header-section-before">
 			<div class="header-logo-before"><a href="index.html"><img src="img/logo-02.png" ></a></div>
 		</div>
 		<div class="header-section-before">
 			<div class="header-section-element-before"><a href="index.html">Главная</a></div>
-			<div class="header-section-element-before"><a href="about.html">О нас</a></div>
+			<div class="header-section-element-before"><a href="about.html">О&nbsp;нас</a></div>
 			<div class="header-section-element-before"><a href="portfolio.html">Портфолио</a></div>
 			<div class="header-section-element-before"><a href="yslugi.html">Услуги</a></div>
 			<div class="header-section-element-before"><a href="contakts.html">Контакты</a></div>
@@ -49,21 +51,27 @@
 <div class="about" id="first" style="height: auto;">
 		<div class="about-section-logo">Контакты</div>
 		<div class="about-section-element">
-			<div class="about-section-element-title">
+			<div class="about-section-element-title" style="padding-top:10%;">
 				Для получения консультации и записи звонить по номерам +375291223365, +375298543000.
 				Или  напишите нам:
 			</div>
 		</div>
 	</div>
-<form class="decor" action="https://formspree.io/TopRoof00@mail.ru" method="POST">
-  <div class="form-inner">
-    <h3>Написать нам</h3>
-    <input type="text" id="" name="user_name"  placeholder="Ваше имя...">
-    <input type="text" id="" name="user_phone" placeholder="Ваш телефон...">
-    <textarea  id="" name="user_text" placeholder="Ваше сообщение..." rows="3"></textarea>
-    <input type="submit" value="Отправить">
-  </div>
-</form>
+	<div class="form_contact">
+		<div class="form_contact_img">
+			<img src="img/mess.png">
+		</div>
+		<form class="decor" action="mail.php" method="POST" style="padding-bottom: 20%">
+			<div class="form-inner">
+				<h3>Написать нам</h3>
+				<input type="text" id="" name="user_name"  placeholder="Ваше имя...">
+				<input type="text" id="" name="user_phone" placeholder="Ваш телефон...">
+				<textarea  id="" name="user_text" placeholder="Ваше сообщение..." rows="3"></textarea>
+				<input type="submit" value="Отправить">
+			</div>
+		</form>
+	</div>
+
 </div>
 
 	
