--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="В нашей команде работают квалифицированные специалисты, которые помогут вам выбрать наиболее подходящие материалы для накрытия крыш, предложат интересное решение, найдут то, что вы искали. Наши опытные монтажники воплотят ваши мечты в жизнь! Монтаж крыши, накрыть крышу, а также демонтаж крыши, качественно и по доступным ценам в Минске и Минской области">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	 <link rel="shortcut icon" href="img/01.png" type="image/png">
@@ -86,7 +88,7 @@ body { margin: 0; }
 			  </a>
 			</figure>
 			<figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-			  <a href="img/img2/19.JPG" itemprop="contentUrl" data-size="1280x960">
+			  <a href="img/img2/19.jpg" itemprop="contentUrl" data-size="1280x960">
                 <img src="img/img2/19.jpg" height="400" width="600" itemprop="thumbnail" alt="">
 			  </a>
 			</figure>
@@ -313,7 +315,7 @@ body { margin: 0; }
 			</figure>
 			
 			<figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-			  <a href="img/2015-07-16 17-03-06.JPG" itemprop="contentUrl" data-size="320x240">
+			  <a href="img/2015-07-16 17-03-06.JPG" itemprop="contentUrl" data-size="3264x2448">
                 <img src="img/2015-07-16 17-03-06.JPG" height="400" width="600" itemprop="thumbnail" alt="">
 			  </a>
 			</figure>
