--- a/yslugi.html
+++ b/yslugi.html
@@ -3,6 +3,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="В нашей команде работают квалифицированные специалисты, которые помогут вам выбрать наиболее подходящие материалы для накрытия крыш, предложат интересное решение, найдут то, что вы искали. Наши опытные монтажники воплотят ваши мечты в жизнь! Монтаж крыши, накрыть крышу, а также демонтаж крыши, качественно и по доступным ценам в Минске и Минской области">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	 <link rel="shortcut icon" href="img/01.png" type="image/png">
@@ -12,14 +14,14 @@
 	<link rel="stylesheet" href="MENU/css/style.css">
 	<title>TopRoof</title>
 </head>
-<body>
+<body style="background-image: none;">
 	<div class="header-before" style="background: #fff">
 		<div class="header-section-before">
 			<div class="header-logo-before"><a href="index.html"><img src="img/logo-02.png" ></a></div>
 		</div>
 		<div class="header-section-before">
 			<div class="header-section-element-before"><a href="index.html">Главная</a></div>
-			<div class="header-section-element-before"><a href="about.html">О нас</a></div>
+			<div class="header-section-element-before"><a href="about.html">О&nbsp;нас</a></div>
 			<div class="header-section-element-before"><a href="portfolio.html">Портфолио</a></div>
 			<div class="header-section-element-before"><a href="yslugi.html">Услуги</a></div>
 			<div class="header-section-element-before"><a href="contakts.html">Контакты</a></div>
@@ -130,7 +132,7 @@
 				<div class="yslugi-card" >
 					<a href="forms.html"  style="text-decoration: none;">
 					<div class="yslugi-section-element-block-page">
-						<img src="img/10-1.JPG">
+						<img src="img/10-1.jpg">
 						<p>Очистка крыш от плесени и грибка аппаратами высокого давления</p>
 					</div>
 					</a>
@@ -138,7 +140,7 @@
 				<div class="yslugi-card">
 					<a href="forms.html"  style="text-decoration: none;">
 					<div class="yslugi-section-element-block-page">
-						<img src="img/11.jpg">
+						<img src="img/11.JPG">
 						<p>Утепление мансард</p>
 					</div>
 					</a>
