--- a/forms.html
+++ b/forms.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
 	<link rel="stylesheet" type="text/css" href="css/forms.css">
 	<link rel="shortcut icon" href="img/01.png" type="image/png">
 	<title>TopRoof-Заказ работы</title>
-</head>
-<body>
+    <title>Отправка формы на почту </title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+  </head>
+
+  <body>
+    <div class="container" style="margin-top: 10%"> 
+
+      <h1 class="text-center">Мы ждём Вашего звонка!</h1>
+      <img src="img/Phone.png" style="height: 20rem; margin: 50px 41.5%;">
+      <h2 class="text-center">+375291223365, +375298543000</h2>
+      
+    </div><!-- /.container -->
 	<div class="contentcolor">
-	 <form class="decor" action="https://formspree.io/TopRoof00@mail.ru" method="POST">
+	 <form class="decor" action="mail.php" method="POST">
 	 	<form class="decor">
  		 <div class="form-left-decoration"></div>
  		 <div class="form-right-decoration"></div>
@@ -24,5 +40,14 @@
  			 </div>
 	  </form>
 	</div>
-</body>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
+	
