--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="В нашей команде работают квалифицированные специалисты, которые помогут вам выбрать наиболее подходящие материалы для накрытия крыш, предложат интересное решение, найдут то, что вы искали. Наши опытные монтажники воплотят ваши мечты в жизнь! Монтаж крыши, накрыть крышу, а также демонтаж крыши, качественно и по доступным ценам в Минске и Минской области">
+	<meta name="yandex-verification" content="30bf4888521ca49a" />
+	<meta name='wmail-verification' content='26999342d2d27b45fe8c364fd90ab9a6' />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	 <link rel="shortcut icon" href="img/01.png" type="image/png">
@@ -9,16 +12,30 @@
 	<link href='https://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 	<link rel="stylesheet" href="MENU/css/style.css">
-	<title>TopRoof</title>
+	<title>TopRoof - Монтаж крыш </title>
 </head>
 <body>
+    <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(54685087, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/54685087" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 	<div class="header">
 		<div class="header-section">
 			<div class="header-logo"><a href="index.html"><img src="img/logo-01.png"></a></div>
 		</div>
 		<div class="header-section">
 			<div class="header-section-element"><a href="index.html">Главная</a></div>
-			<div class="header-section-element"><a href="about.html">О нас</a></div>
+			<div class="header-section-element"><a href="about.html">О&nbsp;нас</a></div>
 			<div class="header-section-element"><a href="portfolio.html">Портфолио</a></div>
 			<div class="header-section-element"><a href="yslugi.html">Услуги</a></div>
 			<div class="header-section-element"><a href="contakts.html">Контакты</a></div>
@@ -109,7 +126,7 @@
 		</div>
 	</div>
 	<div class="yslugi2">
-		<a class="yslugi_button" href="forms.html">Полный список услуг</a>
+		<a class="yslugi_button" href="yslugi.html">Полный список услуг</a>
 	</div>
 	<div class="about" style="height: auto;">
 		<div class="about-section-logo">Контакты</div>
