--- a/thank-you.html
+++ b/thank-you.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="/favicon.ico">
+	 <link rel="shortcut icon" href="img/01.png" type="image/png">
 
     <title>Отправка формы на почту </title>
 
@@ -16,10 +16,12 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container" style="margin-top: 10%"> 
 
       <h1 class="text-center">Спасибо!</h1>
-
+      <img src="img/svyz.png" style="height: 20rem; margin: 50px 41.5%;">
+      <h2 class="text-center">Вскоре мы с вами свяжемся!</h2>
+      
     </div><!-- /.container -->
 
 
